# fastshare

./: Cargo.toml  README.md  demo-file.txt  install.bat  install.sh  test-file.txt
src/: main.rs
