[package]
name = "fastshare"
version = "1.0.0"
edition = "2021"
description = "Ultra-fast file sharing between devices on the same network"
license = "MIT"
authors = ["Samhith Enganti <enganti.samhith@gmail.com>"]
readme = "README.md"
repository = "https://github.com/SammmE/fastshare"
homepage = "https://github.com/SammmE/fastshare"
keywords = [
    "file-sharing",
    "file-transfer",
    "network",
    "fast",
    "local network",
    "peer-to-peer",
    "cross-platform",
    "p2p",
]
categories = ["command-line-utilities"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.17"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
local-ip-address = "0.6"
